--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,10 @@
 
   <!-- destination of the release distribution -->
   <property name="release-dist" value="./tracer.0.1"/>
+
+  <!-- The name of the distro tarball -->
+  <property name="tarball" value="tracer-0.1.tar.gz" />
+
   <!-- Needed to produce the release version which includes CLPR -->
   <property name="CLPR" value="./src/clpr-1.2b"/>
 
@@ -347,7 +351,7 @@
     <exec executable="tar" dir="${basedir}">
 	  <arg value="--gzip" />
 	  <arg value="-cf" />
-	  <arg value="tracer.0.1.tar.gzip" />
+	  <arg value="${tarball}" />
 	  <arg value="${release-dist}" />
 	</exec>
 
@@ -364,13 +368,24 @@
       <fileset dir="${basebin}">
         <exclude name="**/*.jar"/>
       </fileset>
-	  <fileset dir="${antlr}">
-	    <include name=".build" />
-	  </fileset>
+      <fileset dir="${antlr}">
+	<include name=".build" />
+	<include name="CEmitter.java" />
+	<include name="CEmitter.smap" />
+	<include name="CEmitterTokenTypes.java" />
+	<include name="CEmitterTokenTypes.txt" />
+	<include name="PrologEmitter.java" />
+	<include name="PrologEmitter.smap" />
+	<include name="PrologEmitterTokenTypes.java" />
+	<include name="PrologEmitterTokenTypes.txt" />
+      </fileset>
 <!--       <fileset dir="${examples}"> -->
 <!--         <include name="*.c~"/> -->
 <!--       </fileset> -->
     </delete>
+    <delete dir="${frontend-nb}/build" />
+    <delete dir="${frontend-nb}/dist" />
+    <delete file="${tarball}" />
   </target>
 
 </project>
